update pom.xml
# Conflicts:
#	src/main/java/org/example/playground/HutoolTest.java