@@ -81,7 +81,7 @@
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-compress</artifactId>
-            <version>1.27.0</version>
+            <version>1.27.1</version>
             <exclusions>
                 <exclusion>
                     <groupId>org.apache.commons</groupId>
@@ -281,9 +281,7 @@
                 <version>3.13.0</version>
                 <configuration>
                     <showDeprecation>true</showDeprecation>
-                    <compilerArgs>
-                        <compilerArg>--enable-preview</compilerArg>
-                    </compilerArgs>
+                    <enablePreview>true</enablePreview>
                 </configuration>
             </plugin>
             <plugin>
